# scoremind

./: .gitignore  AI 乐谱理解与音乐分析系统 PRD.docx  AI 乐谱理解系统项目介绍.docx  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: routes_analysis.py  routes_explanation.py
backend/app/music/: __init__.py  chord_analyzer.py  key_analyzer.py  note_analyzer.py  parser.py  roman_numeral_analyzer.py
backend/app/schemas/: analysis.py  explanation.py
backend/app/services/: explanation_service.py
backend/tests/: test_musicxml_analysis.py
backend/tests/fixtures/: c_major_inversions.musicxml  c_major_progression.musicxml  carried_context_notes.musicxml  chord_quality_matrix.musicxml  simple_chords.musicxml
docs/: ARCHITECTURE.md  DEMO_FLOW.md  INPUT_EXPANSION.md  INPUT_RESEARCH.md  OMR_EXPERIMENT.md  PORTFOLIO.md  RELEASE_NOTES.md  ROADMAP.md  SCREENSHOT_GUIDE.md  VALIDATION.md  VALIDATION_REPORT_TEMPLATE.md
docs/reviews/: mvp-1.4-carried-context-notes-review.md
experiments/omr/: README.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
