[project]
name = "music-score-analysis-backend"
version = "3.3.0"
description = "MVP FastAPI backend for MusicXML symbolic chord analysis."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "music21>=9.1.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
